// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsBar> should allow for conditional rendering of items 1`] = `
<TabsBar>
  <div
    className="TabsBar"
    role="tablist"
  >
    <TabItem
      tabId="2"
    >
      <div
        aria-selected={false}
        className="TabItem"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        Another tab
      </div>
    </TabItem>
  </div>
</TabsBar>
`;

exports[`<TabsBar> should render tabs bar with minimal correctly 1`] = `
<TabsBar>
  <div
    className="TabsBar"
    role="tablist"
  >
    <TabItem
      tabId="1"
    >
      <div
        aria-selected={false}
        className="TabItem"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        Some tab
      </div>
    </TabItem>
    <TabItem
      tabId="2"
    >
      <div
        aria-selected={false}
        className="TabItem"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        Another tab
      </div>
    </TabItem>
  </div>
</TabsBar>
`;
